# dooit

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  PKGBUILD  README.md  flake.nix  index.html  main.py  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: app.yml  comment.yml  linitng.yml  linting.yml  nix_build.yml  pyinstaller_binary.yml  pytest.yml  python-publish.yml  ruff.yml  vitepress_deploy.yml
doit/: __init__.py
doit/src/utils/: task.py
doit/ui/: tui.py
doit/ui/events/: __init__.py  events.py
doit/ui/widgets/: __init__.py  border.py  box.py  date_tree.py  entry.py  help_menu.py  input_box.py  minimal_scrollview.py  navbar.py  nested_list_edit.py  search_tree.py  simple_input.py  sort_options.py  status_bar.py  todo_list.py  tree_edit.py  urgency_tree.py
doit/utils/: __init__.py  config.py  example_config.yaml  parser.py
dooit/: Tests.py  __init__.py  __main__.py
dooit/api/: __init__.py  _constants.py  _vars.py  exceptions.py  hooks.py  item_concrete_creator.py  item_creator.py  manager.py  model.py  model_items.py  state_keeper.py  storage.py  theme.py  todo.py  todo_manager.py  topic.py  tree_state.py  utils.py  workspace.py
dooit/api/hooks/: fix_hooks.py  update_hooks.py  validation_hooks.py
dooit/api/themes/: __init__.py  dracula.py  gruvbox.py  material.py  nord.py  nymph.py
dooit/backport/: migrate_from_v2.py
dooit/ui/: back.py  dooit_api.py  registry.py  styles.tcss  tui.py
dooit/ui/api/: __init__.py  components.py  dooit_api.py  event_handlers.py  events.py  key_manager.py  loader.py  plug.py  widgets.py
dooit/ui/api/events/: events.py  (+1 more)
dooit/ui/css/: __init__.py  classes.py  ids.py  main.py  objs.py  screen.py
dooit/ui/events/: __init__.py  api_events.py  events.py
dooit/ui/formatters/: __init__.py  formatter.py  todo_tree_formatter.py  workspace_tree_formatter.py
dooit/ui/screens/: __init__.py  base.py  help.py  index.py
dooit/ui/widgets/: __init__.py  aligner.py  bar_widget.py  base.py  border.py  box.py  clipboard.py  dashboard.py  empty.py  entry.py  help_menu.py  inputs.py  kwidget.py  minimal_scrollview.py  navbar.py  nested_list_edit.py  node.py  search_menu.py  search_tree.py  simple_input.py  sort_options.py  status_bar.py  status_bar_utils.py  switcher.py  todo.py  todo_list.py  todo_tree.py  tree.py  user_commands.py  utils.py  workspace.py  workspace_tree.py
dooit/utils/: __init__.py  cli_logger.py  conf_reader.py  config.py  css_manager.py  database.py  date_parser.py  dateparser.py  default_config.py  default_config_with_extras.py  example_config.yaml  keybinder.py  parser.py  plugin.py  plugin_manager.py  status_widget.py  todo.py  topic.py  urgency.py  uuid.py  watcher.py  workspace.py
nix/: default.nix  hm-module.nix
search/: search_index.json
site/: bun.lockb  package.json
site/docs/: index.md
site/docs/.vitepress/: config.mts
site/docs/backend/: introduction.md  todo.md  workspace.md
site/docs/configuration/: bar.md  dashboard.md  dooit_api.md  events.md  formatter.md  keys.md  layout.md  theme.md  vars.md
site/docs/extra/: dooit_extras.md  moving_from_v2.md
tests/: generate_test_data.py
tests/test_core/: _base.py  core_base.py  test_css_manager.py  test_date_parse.py  test_formatter.py  test_hooks.py  test_model.py  test_sync.py  test_todo.py  test_workspace.py
tests/test_ui/: _base.py  test_bar.py  test_formatter.py  test_help_screen.py  test_key_resolve.py  test_loader.py  test_search.py  test_sort.py  test_startup.py  test_todo_tree.py  test_workspace_tree.py  ui_base.py
(+69 files in other folders)
