[tool.poetry]
name = "dooit"
version = "3.0.0"
description = "A TUI todo manager"
authors = ["kraanzu <kraanzu@gmail.com>"]
maintainers = ["kraanzu <kraanzu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kraanzu/dooit"
repository = "https://github.com/kraanzu/dooit"
exclude = ["imgs"]

[tool.poetry.dependencies]
python = "^3.8.1"
pyperclip = "^1.8.2"
PyYAML = "^6.0"
tzlocal = "2.1"
textual = "^0.83.0"
python-dateutil = "^2.8.2"
sqlalchemy = "^2.0.31"
platformdirs = "^4.3.6"
dooit-extras = {git = "https://github.com/dooit-org/dooit-extras.git", branch="main", optional = true}

click = "^8.1.7"
[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^3.2.2"
textual-dev = "^1.6.1"
pytest = "^8.3.2"
coverage = "^7.6.1"
pytest-asyncio = "^0.24.0"
faker = "^29.0.0"

[tool.poetry.extras]
extras = ["dooit-extras"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dooit = 'dooit.__main__:main'

# -------------- TOOLING --------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
ignore=["E712"]

[tool.coverage.report]
omit = [
    "nix/store/*",
    "dooit/utils/default_config.py"
]
