[tool.poetry]
name = "dooit"
version = "3.0.4"
description = "A TUI Todo Manager"
authors = ["kraanzu <kraanzu@gmail.com>"]
maintainers = ["kraanzu <kraanzu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dooit-org/dooit"
repository = "https://github.com/dooit-org/dooit"
exclude = ["imgs"]

[tool.poetry.dependencies]
python = "^3.9"
pyperclip = "^1.9.0"
pyyaml = "^6.0.2"
tzlocal = "^5.2"
textual = "^0.86.1"
python-dateutil = "^2.9.0.post0"
sqlalchemy = "^2.0.36"
platformdirs = "^4.3.6"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pre-commit = "^4.0.1"
textual-dev = "^1.6.1"
pytest = "^8.3.3"
coverage = "^7.6.4"
pytest-asyncio = "^0.24.0"
faker = "^30.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dooit = 'dooit.__main__:main'

# -------------- TOOLING --------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
ignore=["E712"]

[tool.coverage.report]
omit = [
    "nix/store/*",
    "dooit/utils/default_config.py"
]
